--- a/src/app/directives/pwd-validator/pwd.validator.component.css
+++ b/src/app/directives/pwd-validator/pwd.validator.component.css
@@ -1,9 +1,9 @@
-.pwd-validator-container{
-  background-color: red;
-  padding:  10px;
-  width: 200px;
-  height: 100px;
-}
+/*.pwd-validator-container{*/
+  /*background-color: red;*/
+  /*padding:  10px;*/
+  /*width: 200px;*/
+  /*height: 100px;*/
+/*}*/
 
 
 
