--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <br>
 <br>
 <br>
-<input [value]="username" value="username" (input)="username = $event.target.value"
+<input [value]="username" value="" (input)="username = $event.target.value"
        [popover]="popTemplate" triggers="focus"  placement="right" popoverTitle="Your password must :">
 
 <ng-template #popTemplate>
